# selenium_b3

./: pyproject.toml
selenium_b3/: main.py  upload.py
selenium_b3/App/: data_transform.py  selenium_export.py  upload_aws.py
selenium_b3/data/: IBOVDia_04-07-24 (1).csv  IBOVDia_08-07-24.csv  IBOVDia_11-07-24.csv  IBOVDia_2024-07-04.parquet  IBOVDia_2024-07-08.parquet  IBOVDia_2024-07-11.parquet  IBOVDia_25-06-24.csv  IBOVDia_26-06-24.csv  IBOVDia_27-06-24.csv  IBOVDia_27-06-24.parquet  IBOVDia_28-06-24.csv  IBOVDia_28-06-24.parquet
