[tool.poetry]
name = "selenium-b3"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.133"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
